--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-dupe-keys":2
+    }
   },
   "browserslist": [
     "> 1%",
