--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
@@ -43,7 +44,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-dupe-keys":2
+      "no-dupe-keys": 2
     }
   },
   "browserslist": [
