--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
     "element-theme": "^2.0.1",
-    "element-ui": "^2.4.5",
+    "element-ui": "^2.13.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -28,6 +28,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.3",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11",
