--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "less-loader": "^7.0.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.3",
+    "sass-resources-loader": "^2.1.1",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11",
