--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-dupe-keys": 2
+      "no-dupe-keys": 2,
+      "vue/no-dupe-keys": "off"
     }
   },
   "browserslist": [
