--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "component": "^1.1.0",
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
     "element-theme": "^2.0.1",
