--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "echarts": "^4.9.0",
     "element-theme": "^2.0.1",
     "element-ui": "^2.13.2",
+    "screenfull": "^5.0.2",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0"
