--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^4.0.0",
     "component": "^1.1.0",
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
     "element-theme": "^2.0.1",
     "element-ui": "^2.13.2",
     "screenfull": "^5.0.2",
+    "tinymce": "^5.6.0",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0"
